# projektisininen

./: .coveragerc  .gitignore  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  requirements.txt  run_robot_tests.sh
.github/workflows/: main.yml
src/: app.py  cfg.py  controller.py  db.py  index.py  initialize_db.py  log.html  output.xml  report.html  schema.sql
src/controllers/: main_controller.py  test_controller.py
src/entities/: citation.py  user.py
src/models/: article.py  book.py  citation.py  othercitation.py  user.py
src/repositories/: citation_repository.py  user_repository.py
src/services/: bibgen.py  citation_services.py  user_services.py
src/templates/: citations.html  edit_article_citation.html  edit_book_citation.html  edit_citation.html  edit_other_citation.html  error.html  index.html  login.html  new_article.html  new_book.html  new_citation.html  other_citation.html  register.html
src/tests/: citation_repository_test.py  conftest.py  user_repository_test.py  user_services_test.py
src/tests/robot/: AppLibrary.py  citation_resource.robot  download_bib.robot  login.robot  new_citation.robot  register.robot  resource.robot  user_resource.robot
src/tests/unit/: bibgen_test.py  citation_repository_test.py  citation_services_test.py  user_repository_test.py  user_services_test.py
